--- a/src/assets/missions/001.md
+++ b/src/assets/missions/001.md
@@ -2,31 +2,27 @@
 Milk Run
 Start
 
-# Mission // 001
-
-## MILK RUN
-
-### SITUATION OVERVIEW
+## SITUATION OVERVIEW
 
 After a grueling 6 months of little to no activity, the Rio Grande has finally reached Cressidium. As the only Lancer-Tier pilots assigned to this backwater, you've been given the presigious position of Bodyguards to Ambassador Bannerjee and Captain Farris.
 
-### OBJECTIVES
+## OBJECTIVES
 
 - Rendezvous ‘in uniform’ (read: in mech) with Captain Farris and Ambassador Bannerjee at FOB Saber.
 
-### PARAMETERS
+## PARAMETERS
 
 - Peacetime security. Do not fire unless fired upon.
 
-### STAKES
+## STAKES
 
 - Deter hostilities, but maintain proper decorum. The negotiations must remain stable.
 
-### REWARD
+## REWARD
 
 - Commendations for a License Level increase.
 
-### RESERVES: 
+## RESERVES: 
 
 - None.
 
