--- a/src/assets/missions/001.md
+++ b/src/assets/missions/001.md
@@ -26,6 +26,6 @@ After a grueling 6 months of little to no activity, the Rio Grande has finally r
 
 - None.
 
-### AUTHORIZED BY:
+## AUTHORIZED BY:
 # CAPTAIN BRIGID FARRIS
 # THE UNS-CV RIO GRANDE
