--- a/src/assets/missions/001.md
+++ b/src/assets/missions/001.md
@@ -4,7 +4,7 @@ Start
 
 ## SITUATION OVERVIEW
 
-After a grueling 6 months of little to no activity, the Rio Grande has finally reached Cressidium. As the only Lancer-Tier pilots assigned to this backwater, you've been given the presigious position of Bodyguards to Ambassador Bannerjee and Captain Farris.
+After a gruelling 6 months of little to no activity, the Rio Grande has finally reached Cressidium. As the only Lancer-Tier pilots assigned to this backwater, you've been given the presigious position of Bodyguards to Ambassador Bannerjee and Captain Farris.
 
 ## OBJECTIVES
 
