--- a/src/assets/events/000.md
+++ b/src/assets/events/000.md
@@ -13,13 +13,13 @@ https://i.imgur.com/JjgOUmB.png
 
 ## II. MAJOR POLITICAL ENTITIES
 
-# 1. Leandric States Alliance (LSA)
+### 1. Leandric States Alliance (LSA)
 
 - Originated as a coalition of smaller states resisting Vestan expansion during the Barren Years (civil conflict over land/resources).
 
 - Present-day stance: Defensive, pragmatic, nominally democratic.
 
-# 2. Vestan Sovereignty
+### 2. Vestan Sovereignty
 
 - Founded by descendants of SecComm-affiliated leaders fleeing collapse.
 
@@ -29,7 +29,7 @@ https://i.imgur.com/JjgOUmB.png
 
 - External posture: Attending current Union-mediated peace talks but relations with LSA remain tense.
 
-# 3. Republic of Okasnia
+### 3. Republic of Okasnia
 
 - Third-largest power bloc, maintains balanced relations with both LSA and Sovereignty.
 
