--- a/src/assets/events/000.md
+++ b/src/assets/events/000.md
@@ -13,7 +13,7 @@ https://i.imgur.com/JjgOUmB.png
 
 ## II. MAJOR POLITICAL ENTITIES
 
-https://i.imgur.com/JjgOUmB.png
+![Current Political Map](https://i.imgur.com/JjgOUmB.png)
 
 ### 1. Leandric States Alliance (LSA)
 
