--- a/src/assets/events/001.md
+++ b/src/assets/events/001.md
@@ -27,7 +27,7 @@ The Rio Grande is smaller than full carriers (e.g. the Amazon-class) but is fast
 
 - Mission: Provide secure transport, logistics, and overwatch for Union’s diplomatic delegation.
 
-# Operations:
+### Operations:
 
 - Transport of trade goods, cultural exchanges, scientific and engineering detachments.
 
@@ -39,7 +39,7 @@ Cressidium’s native powers present limited naval threat capacity at present; R
 
 ## III. LIFE ABOARD
 
-# Standard Operations
+### Standard Operations
 
 During deep-space patrols, crews rotate between:
 
@@ -53,7 +53,7 @@ Currently, with all hands active in support of the mission, life aboard includes
 
 - Close coordination with diplomatic and scientific teams.
 
-# Crew Culture
+### Crew Culture
 
 With no pressing combat threat, daily life also includes:
 
@@ -83,5 +83,5 @@ The squad has been in transit for six months aboard the Rio Grande. During this 
 
 This long voyage has given the squad time to bond, sharpen skills, and prepare for their mission. Now, with the diplomatic operation in full swing, Rio Grande stands as both fortress and lifeline in orbit above Cressidium.
 
-### Prepared by: Union Naval Command – Cascade Line Expeditionary Fleet
-### Issued to: All personnel assigned to Rio Grande and affiliated diplomatic operations
+# Prepared by: Union Naval Command – Cascade Line Expeditionary Fleet
+# Issued to: All personnel assigned to Rio Grande and affiliated diplomatic operations
