--- a/src/assets/events/001.md
+++ b/src/assets/events/001.md
@@ -3,6 +3,8 @@ CREW ORIENTATION DOCUMENT
 5016u
 https://i.imgur.com/WYY7fM7.png
 
+This dossier has been prepared by Union Naval Command for personnel assigned to the diplomatic mission at Cressidium. It provides an overview of the Rio Grande, the nature of the voyage, and the planetary situation awaiting Union representatives. While detailed operational orders will be delivered through secure channels, this document serves as a primer—ensuring all assigned personnel share a common understanding of the mission, its context, and the responsibilities that lie ahead.
+
 ## I. VESSEL OVERVIEW
 
 - Class: Ebro-class Light Carrier
