--- a/src/assets/events/003.md
+++ b/src/assets/events/003.md
@@ -7,7 +7,7 @@ This dossier profiles the principal figures involved in Operation: Solstice Rain
 
 ## I. SHIPBOARD COMMAND
 
-# Captain Brigid Farris
+### Captain Brigid Farris
 
 - Role: Commanding Officer, U.N.S. Rio Grande
 
@@ -17,7 +17,7 @@ This dossier profiles the principal figures involved in Operation: Solstice Rain
 
 - Notes: Culturally rooted; enjoys recounting her family’s bakery traditions. Known to maintain morale with crew-wide cooking contests during shore leave. First assignment leading a recontact mission.
 
-# 1st Lieutenant Alex Kim
+### 1st Lieutenant Alex Kim
 
 - Role: Executive Officer, Rio Grande
 
@@ -27,7 +27,7 @@ This dossier profiles the principal figures involved in Operation: Solstice Rain
 
 - Notes: Overly formal at times; delivers frequent regulation lectures. Crew anticipate growth in confidence under Farris’s mentorship.
 
-# Rio
+### Rio
 
 - Role: Shipboard NHP, THALASSA-class Naval Intelligence
 
@@ -39,7 +39,7 @@ This dossier profiles the principal figures involved in Operation: Solstice Rain
 
 ## II. SHIPBOARD COMPLEMENT
 
-# Staff Sergeant Omari Garcia
+### Staff Sergeant Omari Garcia
 
 - Role: Union Marines, Senior NCO aboard Rio Grande
 
@@ -49,7 +49,7 @@ This dossier profiles the principal figures involved in Operation: Solstice Rain
 
 - Notes: Enjoys fishing and antique firearms. Frequently jokes about retiring “somewhere tropical,” but shows no signs of slowing.
 
-# Pilot Officer Naia Reynaud
+### Pilot Officer Naia Reynaud
 
 - Role: Dropship Pilot, Lancer Detachment
 
@@ -61,7 +61,7 @@ This dossier profiles the principal figures involved in Operation: Solstice Rain
 
 ## III. DIPLOMATIC STAFF
 
-# Ambassador Nilan Bannerjee
+### Ambassador Nilan Bannerjee
 
 - Role: Union Administrative Department – Chief Diplomatic Envoy to Cressidium
 
@@ -72,5 +72,5 @@ This dossier profiles the principal figures involved in Operation: Solstice Rain
 - Notes: Known for charm and dry humor. Poker face considered exemplary. Current assignment among the most consequential of career: bridging LSA and Sovereignty divisions.
 
 ## Prepared by:
-### Union Intelligence Bureau – Personnel Division, Cascade Line Desk
-### Reviewed/Approved by: Diplomatic Corps Liaison Office
+# Union Intelligence Bureau – Personnel Division, Cascade Line Desk
+# Reviewed/Approved by: Diplomatic Corps Liaison Office
