--- a/src/assets/events/003.md
+++ b/src/assets/events/003.md
@@ -9,6 +9,8 @@ This dossier profiles the principal figures involved in Operation: Solstice Rain
 
 ### Captain Brigid Farris
 
+![Captain Farris](https://imgur.com/9xRmhOg)
+
 - Role: Commanding Officer, U.N.S. Rio Grande
 
 - Profile: Career naval officer, 20 years subjective service. Ten years as commanding officer. Calm, confident, quick-thinking.
@@ -19,6 +21,8 @@ This dossier profiles the principal figures involved in Operation: Solstice Rain
 
 ### 1st Lieutenant Alex Kim
 
+![1st Lieutenant Alex Kim](https://imgur.com/PhrQmPT)
+
 - Role: Executive Officer, Rio Grande
 
 - Profile: Young, ambitious, precise. Recently promoted to XO.
@@ -28,6 +32,9 @@ This dossier profiles the principal figures involved in Operation: Solstice Rain
 - Notes: Overly formal at times; delivers frequent regulation lectures. Crew anticipate growth in confidence under Farris’s mentorship.
 
 ### Rio
+
+![Rio](https://imgur.com/iiHYRNM)
+
 
 - Role: Shipboard NHP, THALASSA-class Naval Intelligence
 
@@ -41,6 +48,8 @@ This dossier profiles the principal figures involved in Operation: Solstice Rain
 
 ### Staff Sergeant Omari Garcia
 
+![Staff Sergeant Omari Garcia](https://imgur.com/rohFvMF)
+
 - Role: Union Marines, Senior NCO aboard Rio Grande
 
 - Profile: Veteran marine, decorated for valor during Pellaran Dispute. Loyal, aggressive, unflinching.
@@ -50,6 +59,8 @@ This dossier profiles the principal figures involved in Operation: Solstice Rain
 - Notes: Enjoys fishing and antique firearms. Frequently jokes about retiring “somewhere tropical,” but shows no signs of slowing.
 
 ### Pilot Officer Naia Reynaud
+
+![Pilot Officer Naia Reynaud](https://imgur.com/dQKPEZP)
 
 - Role: Dropship Pilot, Lancer Detachment
 
@@ -62,6 +73,8 @@ This dossier profiles the principal figures involved in Operation: Solstice Rain
 ## III. DIPLOMATIC STAFF
 
 ### Ambassador Nilan Bannerjee
+
+![Ambassador Nilan Bannerjee](https://imgur.com/PZDnxM7)
 
 - Role: Union Administrative Department – Chief Diplomatic Envoy to Cressidium
 
