--- a/src/assets/events/003.md
+++ b/src/assets/events/003.md
@@ -9,7 +9,7 @@ This dossier profiles the principal figures involved in Operation: Solstice Rain
 
 ### Captain Brigid Farris
 
-![Captain Farris](https://imgur.com/9xRmhOg)
+![Captain Farris](https://i.imgur.com/9xRmhOg.png)
 
 - Role: Commanding Officer, U.N.S. Rio Grande
 
@@ -21,7 +21,7 @@ This dossier profiles the principal figures involved in Operation: Solstice Rain
 
 ### 1st Lieutenant Alex Kim
 
-![1st Lieutenant Alex Kim](https://imgur.com/PhrQmPT)
+![1st Lieutenant Alex Kim](https://i.imgur.com/PhrQmPT.png)
 
 - Role: Executive Officer, Rio Grande
 
@@ -33,7 +33,7 @@ This dossier profiles the principal figures involved in Operation: Solstice Rain
 
 ### Rio
 
-![Rio](https://imgur.com/iiHYRNM)
+![Rio](https://i.imgur.com/iiHYRNM.png)
 
 
 - Role: Shipboard NHP, THALASSA-class Naval Intelligence
@@ -48,7 +48,7 @@ This dossier profiles the principal figures involved in Operation: Solstice Rain
 
 ### Staff Sergeant Omari Garcia
 
-![Staff Sergeant Omari Garcia](https://imgur.com/rohFvMF)
+![Staff Sergeant Omari Garcia](https://i.imgur.com/rohFvMF.png)
 
 - Role: Union Marines, Senior NCO aboard Rio Grande
 
@@ -60,7 +60,7 @@ This dossier profiles the principal figures involved in Operation: Solstice Rain
 
 ### Pilot Officer Naia Reynaud
 
-![Pilot Officer Naia Reynaud](https://imgur.com/dQKPEZP)
+![Pilot Officer Naia Reynaud](https://i.imgur.com/dQKPEZP.png)
 
 - Role: Dropship Pilot, Lancer Detachment
 
@@ -74,7 +74,7 @@ This dossier profiles the principal figures involved in Operation: Solstice Rain
 
 ### Ambassador Nilan Bannerjee
 
-![Ambassador Nilan Bannerjee](https://imgur.com/PZDnxM7)
+![Ambassador Nilan Bannerjee](https://i.imgur.com/PZDnxM7.png)
 
 - Role: Union Administrative Department – Chief Diplomatic Envoy to Cressidium
 
