--- a/src/assets/events/003.md
+++ b/src/assets/events/003.md
@@ -48,7 +48,7 @@ This dossier profiles the principal figures involved in Operation: Solstice Rain
 
 ### Staff Sergeant Omari Garcia
 
-![Staff Sergeant Omari Garcia](https://i.imgur.com/rohFvMF.png)
+![Staff Sergeant Omari Garcia](https://i.imgur.com/E1bwr1Q.png)
 
 - Role: Union Marines, Senior NCO aboard Rio Grande
 
