--- a/src/assets/events/003.md
+++ b/src/assets/events/003.md
@@ -60,7 +60,7 @@ This dossier profiles the principal figures involved in Operation: Solstice Rain
 
 ### Pilot Officer Naia Reynaud
 
-![Pilot Officer Naia Reynaud](https://i.imgur.com/dQKPEZP.png)
+![Pilot Officer Naia Reynaud](https://i.imgur.com/5eBLJbu.png)
 
 - Role: Dropship Pilot, Lancer Detachment
 
