--- a/src/assets/events/000.md
+++ b/src/assets/events/000.md
@@ -1,7 +1,7 @@
 CRESSIDIUM AT A GLANCE
 UNION INTELLIGENCE DOSSIER
 5016u
-https://i.imgur.com/5UhZHcE.png
+![Cressidium Overview](/events/000/header.png)
 
 This report summarizes Union’s current intelligence on Cressidium, a Cradle-type world along the Cascade Line. It details the planet’s environment, major political blocs, and military capabilities, as well as the challenges facing the diplomatic mission. While not exhaustive, the information contained here represents the most up-to-date analysis available to Union forces. Personnel are advised to familiarize themselves with this briefing in preparation for operations in Cressidium’s orbit and on its surface.
 
@@ -15,7 +15,7 @@ This report summarizes Union’s current intelligence on Cressidium, a Cradle-ty
 
 ## II. MAJOR POLITICAL ENTITIES
 
-![Current Political Map](https://i.imgur.com/JjgOUmB.png)
+![Current Political Map](/events/000/map.png)
 
 ### 1. Leandric States Alliance (LSA)
 
