--- a/src/assets/events/001.md
+++ b/src/assets/events/001.md
@@ -1,7 +1,7 @@
 CREW MANIFEST
 UNION PERSONNEL DOSSIER
 5016u
-https://i.imgur.com/AYZ1gbY.png
+/events/001/header.png
 
 This dossier profiles the principal figures involved in Operation: Solstice Rain. It provides background information on commanding officers, diplomatic staff, and support personnel aboard the Rio Grande and assigned to Union’s diplomatic mission. All field personnel are advised to review these entries thoroughly.
 
@@ -9,7 +9,7 @@ This dossier profiles the principal figures involved in Operation: Solstice Rain
 
 ### Captain Brigid Farris
 
-![Captain Farris](https://i.imgur.com/9xRmhOg.png)
+![Captain Farris](/events/001/Cpt_Farris_-_Serious.png)
 
 - Role: Commanding Officer, U.N.S. Rio Grande
 
@@ -21,7 +21,7 @@ This dossier profiles the principal figures involved in Operation: Solstice Rain
 
 ### 1st Lieutenant Alex Kim
 
-![1st Lieutenant Alex Kim](https://i.imgur.com/PhrQmPT.png)
+![1st Lieutenant Alex Kim](/events/001/Lt_Alex-Kim_Serious.png)
 
 - Role: Executive Officer, Rio Grande
 
@@ -33,7 +33,7 @@ This dossier profiles the principal figures involved in Operation: Solstice Rain
 
 ### Rio
 
-![Rio](https://i.imgur.com/iiHYRNM.png)
+![Rio](/events/001/Rio_Happy.png)
 
 
 - Role: Shipboard NHP, THALASSA-class Naval Intelligence
@@ -48,7 +48,7 @@ This dossier profiles the principal figures involved in Operation: Solstice Rain
 
 ### Staff Sergeant Omari Garcia
 
-![Staff Sergeant Omari Garcia](https://i.imgur.com/E1bwr1Q.png)
+![Staff Sergeant Omari Garcia](/events/001/Garcia.png)
 
 - Role: Union Marines, Senior NCO aboard Rio Grande
 
@@ -60,7 +60,7 @@ This dossier profiles the principal figures involved in Operation: Solstice Rain
 
 ### Pilot Officer Naia Reynaud
 
-![Pilot Officer Naia Reynaud](https://i.imgur.com/5eBLJbu.png)
+![Pilot Officer Naia Reynaud](/events/001/Naia_Reynaud_-_Bio_Arm_-_Smoking.png)
 
 - Role: Dropship Pilot, Lancer Detachment
 
@@ -74,7 +74,7 @@ This dossier profiles the principal figures involved in Operation: Solstice Rain
 
 ### Ambassador Nilan Bannerjee
 
-![Ambassador Nilan Bannerjee](https://i.imgur.com/PZDnxM7.png)
+![Ambassador Nilan Bannerjee](/events/001/Ambassador_Nilan_Bannerjee_-_Union.png)
 
 - Role: Union Administrative Department – Chief Diplomatic Envoy to Cressidium
 
