--- a/src/assets/events/003.md
+++ b/src/assets/events/003.md
@@ -1,7 +1,7 @@
 GENERAL SETTING BRIEF
 UNION INTELLIGENCE DOSSIER
 5016u
-https://i.imgur.com/iXotUyp.png
+/events/003/header.png
 
 This document provides a concise overview of the wider galaxy, Union’s role, and the framework within which Lancers operate. It is intended to ensure all personnel possess a working knowledge of the setting, its powers, and the structure of their missions. While not exhaustive, this briefing covers the most relevant elements for Union field operatives and affiliated contractors.
 
