--- a/src/assets/missions/001.md
+++ b/src/assets/missions/001.md
@@ -1,31 +1,31 @@
 001
-Milk Run
+TEST
 start
 
 ## SITUATION OVERVIEW
 
-After a gruelling 6 months of little to no activity, the Rio Grande has finally reached Cressidium. As the only Lancer-Tier pilots assigned to this backwater, you've been given the presigious position of Bodyguards to Ambassador Bannerjee and Captain Farris.
+SEMPER FIDELIS
 
 ## OBJECTIVES
 
-- Rendezvous ‘in uniform’ (read: in mech) with Captain Farris and Ambassador Bannerjee at FOB Saber.
+- SEMPER FIDELIS
 
 ## PARAMETERS
 
-- Peacetime security. Do not fire unless fired upon.
+-SEMPER FIDELIS
 
 ## STAKES
 
-- Deter hostilities, but maintain proper decorum. The negotiations must remain stable.
+- SEMPER FIDELIS
 
 ## REWARD
 
-- Commendations for a License Level increase.
+- SEMPER FIDELIS
 
 ## RESERVES: 
 
 - None.
 
 ## AUTHORIZED BY:
-# CAPTAIN BRIGID FARRIS
-# THE UNS-CV RIO GRANDE
+# CAPTAIN POOPOOPEEPEE
+# UNSC COMMAND
