--- a/src/assets/events/000.md
+++ b/src/assets/events/000.md
@@ -1,72 +1,5 @@
-CRESSIDIUM AT A GLANCE
-UNION INTELLIGENCE DOSSIER
-5016u
-/events/000/header.png
+TEST
+YEAR
+URL to header
 
-This report summarizes Union’s current intelligence on Cressidium, a Cradle-type world along the Cascade Line. It details the planet’s environment, major political blocs, and military capabilities, as well as the challenges facing the diplomatic mission. While not exhaustive, the information contained here represents the most up-to-date analysis available to Union forces. Personnel are advised to familiarize themselves with this briefing in preparation for operations in Cressidium’s orbit and on its surface.
-
-## I. PLANETARY OVERVIEW:
-
-- Designation: Cressidium
-- Type: Cradle-class planet, Cascade Line position
-- Environment: Human-compatible climate and biosphere. Flora and fauna include both native lifeforms and colonial-era introductions.
-- Surface: Predominantly oceanic with large continental landmasses and archipelagos.
-- Population: Continuous human habitation for ~500 years. Development of large nation-states and blocs.
-
-## II. MAJOR POLITICAL ENTITIES
-
-![Current Political Map](/events/000/map.png)
-
-### 1. Leandric States Alliance (LSA)
-
-- Originated as a coalition of smaller states resisting Vestan expansion during the Barren Years (civil conflict over land/resources).
-
-- Present-day stance: Defensive, pragmatic, nominally democratic.
-
-### 2. Vestan Sovereignty
-
-- Founded by descendants of SecComm-affiliated leaders fleeing collapse.
-
-- Governance: Authoritarian, centralist.
-
-- Recent activity: Assassinations and power struggles have revitalized hardline, neo-anthrochauvinist factions. Moderates retain influence but are embattled.
-
-- External posture: Attending current Union-mediated peace talks but relations with LSA remain tense.
-
-### 3. Republic of Okasnia
-
-- Third-largest power bloc, maintains balanced relations with both LSA and Sovereignty.
-
-- Secondary role in current tensions.
-
-## III. STRATEGIC SITUATION
-
-- Conflict Status: LSA vs. Sovereignty engaged in long-term cold war. Proxy conflicts and hostile diplomacy common. Outright war has been avoided for decades.
-
-- Current Outlook: Volatile. Resurgence of Sovereignty hardliners may destabilize diplomatic progress.
-
-## IV. SOCIETAL CHARACTERISTICS
-
-- Predominantly isolationist until recent decades.
-
-- Public perception: Union presumed destroyed following fall of SecComm. External contact viewed as existential risk.
-
-- Spacefaring capacity: Historically minimal (satellites only). Within past century, constructed multiple space elevators and developed corvette-equivalent orbital craft.
-
-- Current orbital forces: Deterrence doctrine. Roles include anti-satellite operations and limited orbit-to-surface strikes.
-
-## V. TECHNOLOGICAL BASELINE
-
-- Despite isolation, development generally matches galactic norms in conventional science and engineering.
-
-- Mech development: Origin traced to Genghis Mk I (Hercynian Crisis era). Cressidium mechs evolved independently, performance comparable to Union baseline.
-
-- Paracausal sciences: Significantly underdeveloped relative to Union standards.
-
-- Manufacturing: Early colonial printers degraded over centuries. Reliance now on traditional industry.
-
-- Union Leverage: Provision of modern printer technology is primary incentive in accession negotiations.
-
-## VI. ASSESSMENT
-
-Cressidium represents a strategically significant, self-sustaining Cradle world along the Cascade Line. While isolationist history has limited exposure to Union hegemony, local governments maintain robust industrial and military capacity. Current cold war dynamics present both risk and opportunity: collapse into open conflict could destabilize the system, while successful Union engagement could secure a valuable ally and forward operating position.
+Summary
